Fixes #27, blog page misalignment. Resolves #24 by outputing excerpt to subtitles. Now possible to reorder gallery images using a plugin

--- a/wp-content/themes/AJOTO/assets/scss/partials/_page.scss
+++ b/wp-content/themes/AJOTO/assets/scss/partials/_page.scss
@@ -701,7 +701,6 @@ nav#page{
                 margin:10px;
             }
             div{
-                float: left;
                 @include bp(phone){
                     float:none;
                 }
